Bug 1866811 - Reject numeric dates with 0 for mon or mday  a=RyanVM

Original Revision: https://phabricator.services.mozilla.com/D194858

Differential Revision: https://phabricator.services.mozilla.com/D195175